Fix CSS issues on newer gtk3 versions
Every widget now as no border. Setup the progress bar and the notes
view to show nice scrollbars/progressbars.

--- a/rc/pdfpc.css
+++ b/rc/pdfpc.css
@@ -1,13 +1,24 @@
 * {
     background-color: black;
     background-image: none;
+    border: none;
     color: white;
     font-family: Verdana;
 }
 
-/* .slider and .trough are parts of scrollbar */
-.slider, .progressbar {
-    border: none;
+scrolledwindow trough * {
+    background-color: gray;
+}
+
+scrolledwindow trough {
+    background-color: white;
+}
+
+progressbar trough * {
+    background-color: blue;
+}
+
+progressbar trough {
     background-color: white;
 }
 
@@ -19,14 +30,6 @@
         font-size: 5em;
     }
  */
-
-GtkProgressBar {
-    color: gray;
-}
-
-.trough {
-    border: none;
-}
 
 pdfpcTimerLabel.pretalk {
     color: green;
